--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~11.2.13",
     "@angular/common": "~11.2.13",
     "@angular/compiler": "~11.2.13",
@@ -20,7 +21,9 @@
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "@googlemaps/js-api-loader": "^1.11.4",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "@types/google.maps": "^3.44.4",
     "bootstrap": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
